# manual-projects

./: .gitignore  README.md
Исходники/Глава 3. Часть 1/12. Двусвязный список/С++/Продуктовый/DoublyLinkedList/: CMakeLists.txt
Исходники/Глава 3. Часть 1/12. Двусвязный список/С++/Продуктовый/DoublyLinkedList/src/: dll.h  dll.tpp  main.cpp
Исходники/Глава 3. Часть 1/12. Двусвязный список/С++/Продуктовый/DoublyLinkedList/test/: DoublyLinkedListTest.cpp
Лекции/Глава 1/: 10. Советы по решению задач.md  2. Соревнование.md  3. Команда на соревновании.md  4. Конвейер.md  5. Чтение и разметка задач.md  6. Решение задач.md  8. Оценка сложности алгоритма.md  9. Рассчёт максимальной сложности решения задачи.md
Лекции/Глава 3. Часть 1/: 1. Бинарный поиск.md  11. Список.md  12. Двусвязный список.md  13. Стек.md  14. Дек.md  15. Очередь + Очередь с приоритетом.md  18. Хеш-функции и хеширование.md  19. Хеш-таблица.md  2. Тернарный поиск.md  21. Разреженная таблица.md  22-25. Бинарное дерево, дерево поиска,дерево.md  28-30. Графы, Обходы в глубину и ширину.md  3. Сортировка вставками.md  31. Топологическая сортировка.md  32. Эйлеров цикл.md  33. Минимальное остовное дерево (МОД).md  37. Rope строки.md  37. Строки в программировании.md  38. Хэширование строк.md  39. Дерево Фенвика.md  5. Сортировка пузырьком.md  8. Сортировка подсчётами.md  9. K-порядковая статистика.md
Лекции/Красные таблетки/: 1. Вводная лекция.md  10. Восприятие.md  11. Стресс и эмоции.md  12. Рефлексии и Эссе.md  2. Как правильно учиться ?.md  3. Чтение + поиск информации.md  6. Позитивное мышление.md  (+5 more)
(+441 files in other folders)
